# inky_pi

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  run.py  run_flask.py  run_flask_app.py  search.html  searchindex.js  setup.cfg  tasks.py  tox.ini  usage.html
.github/: ISSUE_TEMPLATE.md
.github/workflows/: coverage.yml  docs_pages.yml  main.yml
_modules/: index.html
_modules/inky_pi/: __main__.html  cli.html  configs.html  helper.html  main.html  main_goodnight.html  main_weather.html  util.html
_modules/inky_pi/display/: desktop_driver.html  display_base.html  inky_draw.html  terminal_draw.html
_modules/inky_pi/display/util/: desktop_driver.html  drawing.html  shapes.html
_modules/inky_pi/train/: huxley2.html  open_live.html  train_base.html
_modules/inky_pi/weather/: open_weather_map.html  weather_base.html
_modules/inky_web/: __main__.html  forms.html  routes.html  util.html
_sources/: installation.rst.txt
_sources/source/: inky_pi.cli.rst.txt  inky_pi.configs.rst.txt  inky_pi.display.display_base.rst.txt  inky_pi.display.inky_draw.rst.txt  inky_pi.display.rst.txt  inky_pi.display.terminal_draw.rst.txt  inky_pi.display.util.desktop_driver.rst.txt  inky_pi.display.util.drawing.rst.txt  inky_pi.display.util.rst.txt  inky_pi.rst.txt  inky_pi.train.rst.txt  inky_pi.train.train_base.rst.txt  inky_pi.util.rst.txt  inky_pi.weather.open_weather_map.rst.txt  inky_pi.weather.rst.txt  modules.rst.txt
_sources/source/flask_app/: inky_web.__main__.rst.txt  inky_web.forms.rst.txt  inky_web.routes.rst.txt  inky_web.rst.txt  inky_web.util.rst.txt  modules.rst.txt
_sources/source/inky_pi/: inky_pi.__main__.rst.txt  inky_pi.display.rst.txt  inky_pi.display.util.shapes.rst.txt  inky_pi.train.huxley2.rst.txt  inky_pi.train.open_live.rst.txt  inky_pi.train.rst.txt  inky_pi.weather.weather_base.rst.txt
docs/: conf.py  index.rst  usage.rst
docs/source/: inky_pi.rst
flask_app/: __init__.py  app.py  routes.py  util.py
flask_app/templates/: base.html  edit_env.html  env_load.html  index.html
inky_pi/: __init__.py  __main__.py  cli.py  configs.py  goodnight.py  helper.py  inky_pi.py  main.py  main_goodnight.py  main_weather.py  util.py
inky_pi/display/: desktop_driver.py  display_base.py  inky_draw.py  terminal_draw.py
inky_pi/display/util/: desktop_driver.py  drawing.py  shapes.py
inky_pi/train/: huxley2.py  huxley2_openldbws.py  model_t.py  open_live.py  openldbws.py  t_model.py  train_base.py  train_control.py
inky_pi/view/: drawing.py  inky_draw.py
inky_pi/weather/: model_w.py  open_weather_map.py  openweathermap.py  w_model.py  weather_base.py  weather_control.py
inky_web/: __main__.py  forms.py  routes.py  util.py
inky_web/static/: crs_codes.json
inky_web/static/css/: main.css
inky_web/templates/: base.html  display_configs.html  edit_configs.html  index.html
source/: inky_pi.__main__.html  inky_pi.cli.html  inky_pi.configs.html  inky_pi.display.display_base.html  inky_pi.display.html  inky_pi.display.inky_draw.html  inky_pi.display.terminal_draw.html  inky_pi.display.util.desktop_driver.html  inky_pi.display.util.drawing.html  inky_pi.display.util.html  inky_pi.display.util.shapes.html  inky_pi.html  inky_pi.train.html  inky_pi.train.huxley2.html  inky_pi.train.open_live.html  inky_pi.train.train_base.html  inky_pi.util.html  inky_pi.weather.html  inky_pi.weather.open_weather_map.html  inky_pi.weather.weather_base.html  modules.html
source/flask_app/: inky_web.__main__.html  inky_web.forms.html  inky_web.html  inky_web.routes.html  inky_web.util.html  modules.html
source/inky_pi/: inky_pi.__main__.html  inky_pi.cli.html  inky_pi.configs.html  inky_pi.display.display_base.html  inky_pi.display.html  inky_pi.display.inky_draw.html  inky_pi.display.terminal_draw.html  inky_pi.display.util.desktop_driver.html  inky_pi.display.util.drawing.html  inky_pi.display.util.html  inky_pi.display.util.shapes.html  inky_pi.html  inky_pi.train.html  inky_pi.train.huxley2.html  inky_pi.train.open_live.html  inky_pi.train.train_base.html  inky_pi.util.html  inky_pi.weather.html  inky_pi.weather.open_weather_map.html  inky_pi.weather.weather_base.html  modules.html
tests/: __init__.py  test_inky_pi.py  test_main.py
tests/data/: train_down.json
tests/e2e/: test_e2e.py
tests/integration/: test_main.py
tests/unit/: __init__.py  test_cli.py  test_display.py  test_drawing.py  test_main.py  test_train.py  test_util.py  test_weather.py
tests/unit/flask_app/: conftest.py  test_app.py  test_routes.py  test_util.py
tests/unit/resources/: fakes.py  generate_test_shapes.py  no_trains_zeep.pickle  train_data.json  train_data_zeep.pickle  weather_data.json
tests/unit/test_inky_web/: conftest.py  test_app.py  test_routes.py  test_util.py
